scripts/nullaway/annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8.txt
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:150: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return peers.get(pointToCell(x, y));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:15: error: [NullAway] initializer method does not guarantee @NonNull fields left (line 12), right (line 12), up (line 12), down (line 12), head (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Node(){
    ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:55: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:55: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:88: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TargetGenerator.java:61: error: [NullAway] method returns @Nullable, but superclass method sudoku.generate.SudokuGenerator.getProblem() returns @NonNull
    public SudokuBoard getProblem(){
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/BottomUpGenerator.java:69: error: [NullAway] dereferenced expression options is @Nullable
            } while (board.isSet(cell) || options.cardinality() <= 1);
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SolverService.java:25: error: [NullAway] @NonNull static field BOARD not initialized
    private static SudokuBoard BOARD;   //board being solved
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoardGenerator.java:80: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoard.java:98: error: [NullAway] enhanced-for expression board.getUnits(cell) is @Nullable
        for (List<Integer> unit : board.getUnits(cell)){
                                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
